--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@sanity/image-url": "^1.0.2",
     "framer-motion": "^11.3.7",
     "next": "14.2.5",
+    "next-sanity": "^9.4.2",
     "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
@@ -24,10 +26,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6",
     "typescript": "^5"
   }
 }
