--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@sanity/image-url": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.7",
+    "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "next-sanity": "^9.4.2",
+    "next-video": "^1.1.1",
     "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-player": "^2.16.0",
     "react-simple-typewriter": "^5.0.1",
-    "react-social-icons": "^6.16.0"
+    "react-social-icons": "^6.16.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
